# idiacoin

./: README.md
Idia coin/: Dockerfile  README.md  docker-compose.preview.yml  docker-compose.yml
Idia coin/docs/: ADVANCED_FEATURES.md  COMPLIANCE.md  DEPLOYMENT.md  LEGAL.md  PRIVACY_COIN_DESIGN.md  TOKENOMICS.md
Idia coin/grafana/dashboards/: idia-node.json
Idia coin/idia-core/: Cargo.toml
Idia coin/idia-core/benches/: crypto_benchmarks.rs
Idia coin/idia-core/fuzz/fuzz_targets/: transaction_fuzzer.rs
Idia coin/idia-core/src/: lib.rs
Idia coin/idia-core/src/crypto/: bulletproof.rs  mod.rs  pedersen.rs  ring_signature.rs  stealth_address.rs
Idia coin/idia-core/src/explorer/: metrics.rs  mod.rs  store.rs  views.rs
Idia coin/idia-core/src/network/: dandelion.rs  mod.rs  p2p.rs  tor.rs
Idia coin/idia-core/src/types/: block.rs  mod.rs  transaction.rs  utxo.rs
Idia coin/idia-core/src/wallet/: keystore.rs  mod.rs  scanner.rs  transaction_builder.rs
Idia coin/prometheus/: prometheus.yml
Idia coin/prometheus/rules/: alerts.yml
Idia coin/scripts/: setup-preview.ps1  setup-preview.sh  start-preview.ps1
Idia coin/src/bridge/: manager.rs
Idia coin/src/compliance/: api.rs  checks.rs  reporter.rs
Idia coin/src/governance/: threshold.rs
Idia coin/src/metrics/: compliance.rs
Idia coin/src/privacy/: lelantus.rs
Idia coin/src/rollup/: advanced.rs  processor.rs
Idia coin/src/swap/: atomic.rs
Idia coin/src/tokenomics/: economics.rs  liquidity.rs
Idia coin/tor/: torrc
