[package]
name = "idia-core"
version = "0.1.0"
edition = "2024"
authors = ["Idia Core Team"]
description = "A privacy-focused cryptocurrency implementation"

[dependencies]
# Core cryptographic dependencies
curve25519-dalek = "4.1"
bulletproofs = "4.0"
merlin = "3.0"  # For transcript creation in zero-knowledge proofs
rand = "0.8"    # For secure random number generation
sha2 = "0.10"   # For cryptographic hashing
blake2 = "0.10" # For hashing in various protocols

# Network-related dependencies
libp2p = { version = "0.52", features = ["tcp", "websocket", "noise", "mplex", "yamux", "gossipsub"] }
tokio = { version = "1.32", features = ["full"] }
tor-client = "0.12"  # For Tor SOCKS5 support

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"      # For efficient binary serialization

# Logging and error handling
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"    # For benchmarking
proptest = "1.3"     # For property-based testing
